# trading_saas

./: .env.example  GOOGLE_AUTH_SETUP.md  README.md  docker-compose.yml
backend-rust/: .env  .env.example  Cargo.toml  Dockerfile  README.md  trading_saas.db
backend-rust/migrations/: 20231201000001_initial.sql  20231202000001_change_numeric_to_double.sql
backend-rust/src/: app_middleware.rs  config.rs  database.rs  errors.rs  main.rs
backend-rust/src/handlers/: admin.rs  auth.rs  brokers.rs  dashboard.rs  mod.rs  robots.rs  subscriptions.rs  trades.rs  users.rs
backend-rust/src/models/: broker_connection.rs  mod.rs  subscription.rs  trade.rs  trading_robot.rs  trading_session.rs  user.rs
backend-rust/src/services/: ai_trading_service.rs  auth_service.rs  mod.rs  mt5_service.rs  notification_service.rs  stripe_service.rs  websocket_manager.rs
frontend/: .env  .env.example  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/auth/: Login.js  Register.js
frontend/src/components/common/: LoadingSpinner.js
frontend/src/components/layout/: Layout.js
frontend/src/contexts/: AuthContext.js
frontend/src/services/: api.js
model/: trading_model.onnx
step_counter_app/: README.md  docker-compose.yml  init.sql
step_counter_app/backend/: Dockerfile  database.py  main.py  models.py  requirements.txt
step_counter_app/frontend/: Dockerfile  nginx.conf  package.json
step_counter_app/frontend/public/: index.html
step_counter_app/frontend/src/: App.js  index.css
(+8 files in other folders)
