[package]
name = "trading-saas-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "migrate",
    "macros",
    "bigdecimal"
] }

# BigDecimal for handling NUMERIC types
bigdecimal = { version = "0.4", features = ["serde"] }
num-traits = "0.2"

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# AI/ML
onnxruntime = "0.0.14"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Async traits
async-trait = "0.1"

# WebSocket
futures-util = "0.3"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "builder"] }

[dev-dependencies]
tokio-test = "0.4"
